# animal-keypoint-detection-webapp

./: .gitignore  README.md
src/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
src/core/: celery.py  jinja2.py  settings.py  urls.py
src/model_inference/: apps.py  forms.py  inference_task_runners.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
src/model_inference/inference_runners/: dlc_inference_runner.py  inference_runner.py
src/model_inference/migrations/: 0002_alter_inferredkeypoints_inference_video_and_more.py  0003_inferredkeypoints_user.py  0004_alter_inferredkeypoints_keypoints.py  0005_remove_inferredkeypoints_keypoints_and_more.py  0006_inferredkeypoints_keypoints.py  0007_remove_inferredkeypoints_trained_neural_network.py  0008_inferredkeypoints_dlc_neural_network_and_more.py  0009_alter_inferredkeypoints_dlc_neural_network_and_more.py
src/model_training/: admin.py  error_responses.py  forms.py  models.py  tasks.py  training_task_runners.py  urls.py  views.py
src/model_training/dataset_preparation/: dataset_preparator.py  dlc_dataset_preparator.py
src/model_training/migrations/: 0002_alter_trainedneuralnetwork_neural_network_type_and_more.py  0003_trainedneuralnetwork_user.py  0004_remove_trainedneuralnetwork_neural_network_type_and_more.py  (+2 more)
src/static/: script.js
src/templates/base/: base.html  (+1 more)
src/train_datasets_manager/: admin.py  forms.py  models.py  urls.py  views.py
src/utils/: check_token.py  list_sort.py  validators.py
src/video_manager/: forms.py  models.py  urls.py  views.py
(+38 files in other folders)
