[tool.poetry]
name = "animal keypoint detection webapp"
version = "0.1.0"
description = ""
authors = ["HidenYT <buharev2009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
django = "4.0.1"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
jinja2 = "^3.1.3"
django-sendfile2 = "^0.7.0"
django-stubs = "^4.2.7"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "2.10"
torch = "1.12.0"
deeplabcut = "^2.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
