[tool.poetry]
name = "animal keypoint detection webapp"
version = "0.1.0"
description = ""
authors = ["HidenYT <buharev2009@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.2"
django = "5.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
jinja2 = "^3.1.3"
django-sendfile2 = "^0.7.0"
celery = "^5.3.6"
py7zr = "^0.20.8"
redis = "^5.0.3"
requests = "^2.31.0"
opencv-python = "^4.9.0.80"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
